# kwm

./: CMakeLists.txt  LICENSE.md  README.md  build.sh
include/: config.h  utils.h  wm.h
src/: config.c  main.c  wm.c
src/utils/: debug.c  die.c
